[package]
name = "poker_eval"
version = "0.2.0"
keywords = ["cards", "poker"]
authors = [ "Eric Gröning <eric7237cire@hotmail.fr>", "Wataru Inariba", "Elliott Clark <eclark@apache.org>"]
categories = ["games"]
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "poker_eval"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_perf"
path = "src/test_perf.rs"


[dependencies]
bitvec = {version = "1.0.1", features=["serde"]}
itertools = "*"
log = "*"
env_logger = "*"
getrandom = { version = "0.2", features = ["js"] }
rand="0.8"
wasm-bindgen = "0.2.89"

regex="1"

# redirect logs to console
wasm-logger = "0.2.0"

# show rust stack trace
console_error_panic_hook = "*"
serde = { version = "1.0", features = ["derive"] }

# To return jsvalue
serde-wasm-bindgen = "0.6"

# error object
js-sys = "0.3"

enum_dispatch = "0.3.12"

num-integer = "0.1"

once_cell = "1.19"

boomphf = {version="0.6.0", features=["serde"]}
bincode = "1.3.3"

fastrand = "2.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jammdb = "0.11"
redb = "1.4"
rmp-serde = "1.1.2"


dotenv = "0.15"

# doesn't compile in 32 bits
ph = "0.8.2"