[package]
name = "runner"
version = "3.0.0-beta.4"
keywords = ["cards", "poker"]
categories = ["games"]
homepage = "https://docs.rs/rs_poker"
description = "A library to help with any Rust code dealing with poker. This includes card values, suits, hands, hand ranks, 5 card hand strength calculation, 7 card hand strength calulcation, and monte carlo game simulation helpers."
readme = "README.md"
license = "Apache-2.0"
edition = "2021"



[[bin]]
name = "runner"
path = "src/bin.rs"

[dependencies]
poker_rs = { path = "../poker_rs" }
postflop-solver = {path = "../postflop-solver"}

